--- a/data/config.json
+++ b/data/config.json
@@ -42,5 +42,6 @@
   "chid3": "323120917779578881",
   "token": "Mjc2ODIyOTQ5OTg0NzMxMTM3.C9QSDQ.NoWq0c5JYMx4FgQXdzFwyyP327k",
   "token2": "Mjk0OTA3NTUzNDUwNjg4NTIz.C9QSKQ.Pf1XvXTK0YbqjRsaCaAj5vR3SKI",
+  "token3": "MzQ1MDY1NjM1MDY1MTAyMzM2.DG129A.pMsuDzz6RchPubXGtdwuAEuzGnM",
   "version": "1.9, Open Inglish"
 }
