--- a/data/config.json
+++ b/data/config.json
@@ -40,8 +40,10 @@
   "chid1": "276815944385298432",
   "chid2": "294904825945260056",
   "chid3": "323120917779578881",
+  "chid4": "356272153374621697",
   "token": "Mjc2ODIyOTQ5OTg0NzMxMTM3.C9QSDQ.NoWq0c5JYMx4FgQXdzFwyyP327k",
   "token2": "Mjk0OTA3NTUzNDUwNjg4NTIz.C9QSKQ.Pf1XvXTK0YbqjRsaCaAj5vR3SKI",
   "token3": "MzQ1MDY1NjM1MDY1MTAyMzM2.DG129A.pMsuDzz6RchPubXGtdwuAEuzGnM",
+  "token4":"MzU2Mjc1NzAyOTkzMTI1Mzc2.DJY_Iw.p9B0FW15bvtVwl6MfdxQZplump0",
   "version": "1.9, Open Inglish"
 }
