--- a/data/config.json
+++ b/data/config.json
@@ -41,9 +41,11 @@
   "chid2": "294904825945260056",
   "chid3": "323120917779578881",
   "chid4": "356272153374621698",
+  "chid5":"361321471693422592",
   "token": "Mjc2ODIyOTQ5OTg0NzMxMTM3.C9QSDQ.NoWq0c5JYMx4FgQXdzFwyyP327k",
   "token2": "Mjk0OTA3NTUzNDUwNjg4NTIz.C9QSKQ.Pf1XvXTK0YbqjRsaCaAj5vR3SKI",
   "token3": "MzQ1MDY1NjM1MDY1MTAyMzM2.DG129A.pMsuDzz6RchPubXGtdwuAEuzGnM",
   "token4":"MzU2Mjc1NzAyOTkzMTI1Mzc2.DJY_Iw.p9B0FW15bvtVwl6MfdxQZplump0",
+  "token5":"MzY2NzI2OTcyMDc3NzY4NzA0.DLxEqQ.oiHP_YUrJUBOIe2o4vSZnX2yY0U",
   "version": "1.9, Open Inglish"
 }
