--- a/data/config.json
+++ b/data/config.json
@@ -47,5 +47,5 @@
   "token3": "MzQ1MDY1NjM1MDY1MTAyMzM2.DG129A.pMsuDzz6RchPubXGtdwuAEuzGnM",
   "token4":"MzU2Mjc1NzAyOTkzMTI1Mzc2.DJY_Iw.p9B0FW15bvtVwl6MfdxQZplump0",
   "token5":"MzY2NzI2OTcyMDc3NzY4NzA0.DLxEqQ.oiHP_YUrJUBOIe2o4vSZnX2yY0U",
-  "version": "1.9, Open Inglish"
+  "version": "2.0, SakumiBot"
 }
